--- a/index.html
+++ b/index.html
@@ -5,22 +5,66 @@
 <title>DRender Demo</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 <style>
-  .hidden { display: none }
+  .position-fixed { position: fixed; top: 0; left: 50%; }
 </style>
 <script type='module'>
-import './node_modules/jquery/dist/jquery.js';
 import DRender from "./dist/d_render.js";
-window.$ = jQuery;
 document.addEventListener("DOMContentLoaded", () => DRender.run())
 </script>
 </head>
 <body>
+<h3>A to-do list example</h3>
+<div d-state='{ items: [{ id: 0, event: &#39;Drink a cup of coffee.&#39;, scheduledAt: &#39;9:00 AM&#39;, completed: false }], eventInput: &#39;&#39;, scheduleInput: &#39;&#39;, idCounter: 1 }'>
+<div class='event-form'>
+<form>
+<label>Event</label>
+<input d-model='eventInput' name='event'>
+<label>Scheduled At</label>
+<input d-model='scheduleInput' name='schedule'>
+<input d-click='.prevent { eventInput: &#39;&#39;, scheduleInput: &#39;&#39;, items: items.concat([{ id: idCounter++, event: eventInput, scheduledAt: scheduleInput }]) }' d-disabled='scheduleInput == &#39;&#39; || eventInput == &#39;&#39;' type='submit' value='Submit'>
+</form>
+</div>
+<div class='todo-list' d-loop-var='item' d-loop='items'>
+<div d-key='itemIndex'>
+<div>
+<input d-change='this.parent.setState((state) =&gt; { state.items.find(_item =&gt; item.id === _item.id).completed = !item.completed; return state })' d-prop='{ checked: item.completed }' type='checkbox'>
+<span d-style='{ &#39;text-decoration&#39;: item.completed ? &#39;line-through&#39; : &#39;none&#39;}' d-text='item.event'></span>
+<span d-text='item.scheduledAt'></span>
+<span>
+<a d-click='this.parent.setState({ items: this.parent.state.items.filter(_item =&gt; item.id !== _item.id) })' href='javascript:void(0)'>Remove</a>
+</span>
+</div>
+</div>
+</div>
+</div>
+<h3>A misc example</h3>
 <div d-state='{ count: 0, visible: false }'>
-<p d-text='count'></p>
-<div d-show='visible'>This div will be display while clicking the link below even times.</div>
 <a d-click='{ count: count + 1, visible: !visible }' href='javascript:void(0)'>
 Increase
 </a>
+<p>
+Count
+<span d-text='count'></span>
+</p>
+<div d-show='visible'>This div will be shown while clicking the link below odd number of times.</div>
+<div d-state='{ items: [&#39;a&#39;, &#39;b&#39;, &#39;c&#39;] }'>
+<div d-html='`&lt;span style=&quot;color: rgba(0, 0, 0, 0.25)&quot;&gt;From Parent ${parent.state.count}&lt;span&gt;`'></div>
+<div d-loop-var='item' d-loop='items'>
+<div d-key='itemIndex'>
+<p d-style='{ color: itemIndex % 2 == 0 ? &quot;gray&quot; : &quot;red&quot; }' d-text='`Index: ${itemIndex}, Item: ${item}`'></p>
+</div>
+</div>
+<div>
+<a d-click='{ items: items.concat(Math.random() * 100) }' href='javascript:void(0)'>
+Concat More Item
+</a>
+</div>
+<div>
+<a d-click='{ items: items.slice(0, -1) }' href='javascript:void(0)'>
+Pop Item
+</a>
+</div>
+</div>
 </div>
 </body>
 </html>
