--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <script type='module'>
 import DRender from "./dist/d_render.js";
 document.addEventListener("DOMContentLoaded", () => DRender.run())
+DRender.defineComponent("Mail", {
+  toString(show) {
+    console.log(show)
+  }
+})
 </script>
 </head>
 <body>
+<div d-after-initialized='this.toString(123)' d-component='Mail'></div>
 <h3>A to-do list example</h3>
 <div d-state='{ items: [{ id: 0, event: &#39;Drink a cup of coffee.&#39;, scheduledAt: &#39;9:00 AM&#39;, completed: false }], eventInput: &#39;&#39;, scheduleInput: &#39;&#39;, idCounter: 1 }'>
 <div class='event-form'>
@@ -24,7 +30,7 @@ document.addEventListener("DOMContentLoaded", () => DRender.run())
 <input d-click='.prevent { eventInput: &#39;&#39;, scheduleInput: &#39;&#39;, items: items.concat([{ id: idCounter++, event: eventInput, scheduledAt: scheduleInput }]) }' d-disabled='scheduleInput == &#39;&#39; || eventInput == &#39;&#39;' type='submit' value='Submit'>
 </form>
 </div>
-<div class='todo-list' d-loop-var='item' d-loop='items'>
+<div class='todo-list' d-loop='items' d-loop-var='item'>
 <div d-key='itemIndex'>
 <div>
 <input d-change='this.parent.setState((state) =&gt; { state.items.find(_item =&gt; item.id === _item.id).completed = !item.completed; return state })' d-prop='{ checked: item.completed }' type='checkbox'>
@@ -49,7 +55,7 @@ Count
 <div d-show='visible'>This div will be shown while clicking the link below odd number of times.</div>
 <div d-state='{ items: [&#39;a&#39;, &#39;b&#39;, &#39;c&#39;] }'>
 <div d-html='`&lt;span style=&quot;color: rgba(0, 0, 0, 0.25)&quot;&gt;From Parent ${parent.state.count}&lt;span&gt;`'></div>
-<div d-loop-var='item' d-loop='items'>
+<div d-loop='items' d-loop-var='item'>
 <div d-key='itemIndex'>
 <p d-style='{ color: itemIndex % 2 == 0 ? &quot;gray&quot; : &quot;red&quot; }' d-text='`Index: ${itemIndex}, Item: ${item}`'></p>
 </div>
