Update mutation observer

--- a/index.html
+++ b/index.html
@@ -109,3 +109,10 @@ Pop Item
 </div>
 </body>
 </html>
+<div d-state='{ action: &#39;1&#39;, method: &#39;post&#39; }'>
+<a d-click='{ action: &#39;2&#39;, method: &#39;get&#39; }' href='javascript:void(0)'>Change action to 2</a>
+<form action='' d-prop='{ action, method }' method='post'>
+<div d-text='action'></div>
+<div d-text='method'></div>
+</form>
+</div>
